feat: add new file_2

--- a/Texas_menu.html
+++ b/Texas_menu.html
@@ -48,7 +48,7 @@
                 <div class="Menu_item">
                     <p class="menu-mon-an">CƠM GÀ</p>
                     <p class="menu-mon-an">MỲ Ý</p>
-                    <p class="menu-mon-an">GÀ SÔT BƠ TỎI & THẢO MỘC </p>
+                    <p class="menu-mon-an">GÀ SỐT BƠ TỎI & THẢO MỘC </p>
                     <p class="menu-mon-an">COMBO GÀ RÁN(1 NGƯỜI) </p>
                     <p class="menu-mon-an">COMBO GÀ RÁN(2 NGƯỜI) </p>
                     <p class="menu-mon-an">COMBO GIA ĐÌNH & BẠN BÈ </p>
